--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="block projects">
           <h2>Projects</h2>
           <ol class="myProjects">
-              <li>My first project.</li>
-              <li>My second project.</li>
-              <li>My third project.</li>
+              <li ><a href="https://lozunskuivasul.github.io/MyResume/"> My first project.</a></li>
+              <li><a href="https://lozunskuivasul.github.io/MyResume/">My second project.</a></li>
+              <li><a href="https://lozunskuivasul.github.io/MyResume/">My third project.</a></li>
           </ol>  
         </div>
 
