--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       
         <div class=" block contacts">Contacts
           <div class="contacts">Mob: 
-            <span class="cont"> +38 (067) 97-38-135</span>
+            <span class="cont-phone"> +38 (067) 97-38-135</span>
           </div>
-          <div class="contacts">Mail:
-            <span class="cont"> barsss77@gmail.com</span>
+            <div class="contacts">Mail:
+              <span class="cont-mail"> barsss77@gmail.com</span>
           </div>
         </div>
         <div>
@@ -49,7 +49,8 @@
 
     <!-- Right Column-->
     <div class="right-column">
-        <div class="block header-right-column">
+      <!-- Header Right Column-->
+        <div class="block">
           <h4>Front-End Developer</h4>
           <h1> Vasyl Lozynskyi</h1>
           <p> 
@@ -57,10 +58,10 @@
               skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects.
           </p>
         </div>
-
+      <!--End Header Right Column-->
         <div class="block projects">
           <h2>Projects</h2>
-          <ol class="myProjects">
+          <ol>
               <li ><a href="https://lozunskuivasul.github.io/MyResume/"> My first project.</a></li>
               <li><a href="https://lozunskuivasul.github.io/MyResume/">My second project.</a></li>
               <li><a href="https://lozunskuivasul.github.io/MyResume/">My third project.</a></li>
@@ -86,7 +87,7 @@
           <div>
             <h3>TehAdministrator <span>Lviv Physical Dispensary </span></h3> 
             <h5> 2015 to 2020 <b>|</b> Ukraine Lviv</h5> 
-            <ul class="experience">
+            <ul>
               <li>Maintenance of computer equipment.</li>
               <li>Maintenance of network connections.</li>
             </ul> 
@@ -95,7 +96,7 @@
           <div>  
             <h3>TehDirector <span>Advertising Agency "Press Time"</span> </h3> 
             <h5> 2010 to 2017 <b>|</b> Ukraine Lviv</h5> 
-            <ul class="experience">
+            <ul>
               <li>Organization and developing layouts for clients in an advertising magazine.With CorelDraw and Photoshop.</li>
               <li>Development in PageMaker advertising magazine .</li>
               <li>Maintenance of computer equipment.</li>
