--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       
         <div class=" block contacts">Contacts
           <div class="contacts">Mob: 
-            <span class="cont-phone"> +38 (067) 97-38-135</span>
+           <a href="tel:+38 (067) 97-38-135"><span class="cont-phone"> +38 (067) 97-38-135</span></a>
           </div>
             <div class="contacts">Mail:
-              <span class="cont-mail"> barsss77@gmail.com</span>
+              <a href="mailto:barsss77@gmail.com"><span class="cont-mail"> barsss77@gmail.com</span></a>
           </div>
         </div>
         <div>
           <div class=" block tech-skills">Tech skills</div>
             <ul class="block white">
               <li>HTML5</li>
-              <li>CSS</li>
+              <li>CSS (SCSS/SASS)</li>
               <li>Javascript</li>
               <li>React js framework</li>
               <li>Knowledge of working on Git</li>
