--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       
         <div class=" block contacts">Contacts
           <div class="contacts">Mob: 
-           <a href="tel:+38 (067) 97-38-135"><span class="cont-phone"> +38 (067) 97-38-135</span></a>
+           <a class="cont-phone" href="tel:+38 (067) 97-38-135">+38 (067) 97-38-135</a>
           </div>
             <div class="contacts">Mail:
-              <a href="mailto:barsss77@gmail.com"><span class="cont-mail"> barsss77@gmail.com</span></a>
+              <a class="cont-mail" href="mailto:barsss77@gmail.com">barsss77@gmail.com</a>
           </div>
         </div>
         <div>
