--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img class="my-photo" src="./img/MyPhoto.jpg" alt="MyPhoto">
       
         <div class="block contacts">Contacts
-          <div class="text-contacts">Mob: 
+          <div class=" block text-contacts">Mob: 
            <a class="cont-phone" href="tel:+38 (067) 97-38-135">+38 (067) 97-38-135</a>
           </div>
             <div class="text-contacts">Mail:
