--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <div class="left-column">
       <img class="my-photo" src="./img/MyPhoto.jpg" alt="MyPhoto">
       
-        <div class="block contacts">Contacts
-          <div class=" block text-contacts">Mob: 
+        <div class="block">
+          <div class="contacts">Contacts</div>
+          <div class="text-contacts">Mob: 
            <a class="cont-phone" href="tel:+38 (067) 97-38-135">+38 (067) 97-38-135</a>
           </div>
             <div class="text-contacts">Mail:
               <a class="cont-mail" href="mailto:barsss77@gmail.com">barsss77@gmail.com</a>
-          </div>
+            </div>
         </div>
         <div>
           <div class=" block tech-skills">Tech skills</div>
