--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       
         <div class="block">
           <div class="contacts">Contacts</div>
-          <div class="text-contacts">Mob: 
+          <div class="text-contacts1">Mob: 
            <a class="cont-phone" href="tel:+38 (067) 97-38-135">+38 (067) 97-38-135</a>
           </div>
-            <div class="text-contacts">Mail:
+            <div class="text-contacts2">Mail:
               <a class="cont-mail" href="mailto:barsss77@gmail.com">barsss77@gmail.com</a>
             </div>
         </div>
