--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </p>
         </div>
       <!--End Header Right Column-->
-        <div class="block projects">
+        <div class="block my-projects">
           <h2>Projects</h2>
           <ol>
               <li ><a href="https://lozunskuivasul.github.io/MyResume/"> My first project.</a></li>
